--- a/02.Project/ecommerce-api/package.json
+++ b/02.Project/ecommerce-api/package.json
@@ -21,5 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   }
 }
